--- a/guacamole/Dockerfile
+++ b/guacamole/Dockerfile
@@ -1,5 +1,8 @@
 FROM tomcat:9.0
 
+# Install curl for health checks
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 # Download Guacamole WAR
 ADD https://downloads.apache.org/guacamole/1.5.5/binary/guacamole-1.5.5.war /usr/local/tomcat/webapps/guacamole.war
 
