--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,20 @@ services:
       retries: 3
       interval: 30s
       start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 128M
+          cpus: '0.3'
+        reservations:
+          memory: 64M
+          cpus: '0.2'
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "5"
+        labels: "service=openresty"
     restart: always
     networks:
       - guacnet
@@ -48,6 +62,20 @@ services:
       retries: 10
       interval: 30s
       start_period: 60s  # MySQL needs time to initialize
+    deploy:
+      resources:
+        limits:
+          memory: 768M
+          cpus: '0.75'
+        reservations:
+          memory: 384M
+          cpus: '0.25'
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+        labels: "service=mysql"
     #ports:
     # - "3306:3306"
     restart: always
@@ -73,6 +101,20 @@ services:
       retries: 5
       interval: 30s
       start_period: 120s  # Guacamole needs time to fully start
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+          cpus: '1.0'
+        reservations:
+          memory: 512M
+          cpus: '0.5'
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "20m"
+        max-file: "5"
+        labels: "service=guacamole"
     #ports:
     # - "8080:8080"
     networks:
@@ -85,6 +127,20 @@ services:
       retries: 3
       interval: 30s
       start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 128M
+          cpus: '0.3'
+        reservations:
+          memory: 64M
+          cpus: '0.2'
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "5m"
+        max-file: "3"
+        labels: "service=guacd"
     restart: always
     #ports:
     # - "4822:4822"
